--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    background-image: url('https://media.istockphoto.com/id/910943736/photo/modern-red-metallic-sedan-car-in-urban-setting-tunnel-generic-design-brandless.jpg?s=612x612&w=0&k=20&c=vVjkww95J_tdaS4eW1MSIxCKjI33IoAzsVaFQva8_Vs=');
+    background-image: url('https://plus.unsplash.com/premium_photo-1682125845754-9a4b0d77a66a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzZ8fGNhcnxlbnwwfHwwfHx8MA%3D%3D');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
