--- a/css/styles.css
+++ b/css/styles.css
@@ -925,7 +925,7 @@ section {
 }
 
 /* ---------- Reviews Section ---------- */
-.reviews-carousel {
+/* .reviews-carousel {
     position: relative;
     max-width: 800px;
     margin: 0 auto;
@@ -1041,7 +1041,154 @@ section {
 .carousel-dot.active, .carousel-dot:hover {
     background-color: var(--color-primary);
     transform: scale(1.2);
+} */
+
+.review-con{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: transparent;
 }
+
+.card-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* min-height: 20vh; */
+    background: transparent;
+}
+
+.card-list .card-item .card-link{
+    user-select: none;
+    display: block;
+    background: #ffff;
+    padding: 30px;
+    border-radius: 12px;
+    text-decoration: none;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+    transition: 0.2s ease;
+}
+
+.card-list .card-item .card-link:active{
+    cursor: grabbing;
+}
+
+.card-list .card-link .card-image{
+    width: 100%;
+    /* aspect-ratio: 16 / 9; */
+    object-fit: cover;
+    border-radius: 10px;
+
+}
+
+.card-list .card-link .badge{
+    color: white;
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    margin: 16px 0 10px;
+    background:  #dc3545; 
+    width: fit-content;
+    border-radius: 50px;
+}
+
+.card-list .card-link .badge.designer{
+    color: white ;
+    background-color:  #dc3545; ;
+}
+
+.card-list .card-link .badge.developer{
+    color:white;
+    background-color:  #dc3545; ;
+}
+
+.card-list .card-link .badge.gamer{
+    color: white ;
+    background-color: #dc3545; 
+}
+
+.card-list .card-link .badge.editor {
+    color: white ;
+    background-color:  #dc3545; 
+}
+
+.card-list .card-link .card-title{
+    font-size: 0.8rem;
+    color: grey; 
+    /* font-weight: 600; */
+}
+
+.card-list .card-link .card-button {
+    height: 35px;  
+    width: 35px ;
+    border-radius: 50%;
+    margin: 30px 0 5px;
+    background:none;
+    cursor: pointer;
+    border: 2px solid #ee6611;
+    transform: rotate(-45deg);
+}
+
+.card-list .card-link:hover .card-button{
+    color: #ffff;
+    background: #3a3837;
+}
+
+.card-wrapper{
+    max-width: 1200px;
+    margin: 0 60px 35px;
+    overflow: hidden;
+}
+
+.card-wrapper .swiper-pagination-bullet{
+    height: 13px;
+    width: 13px;
+    opacity: 0.5;
+    background: #f3e8e1;
+}
+
+.swiper-scrollbar{
+    color: white;
+
+}
+
+.swiper-button-prev{
+    color:  #dc3545; 
+}
+
+.swiper-button-next{
+    color:  #dc3545; 
+}
+
+.review-stars {
+    display: flex;
+    margin-bottom: var(--spacing-md);
+}
+
+.star {
+    width: 20px;
+    height: 20px;
+    fill: var(--color-warning);
+    margin-right: 3px;
+}
+
+@media screen and (max-width: 768px){
+    .card-wrapper{
+        margin: 0 5px 25px;
+    }
+
+    .card-wrapper .swiper-slide-button{
+        display: none;
+    }
+
+}
+
+
+
+
+
+
 
 /* ---------- Quote Calculator Section ---------- */
 .quote-calculator {
