--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    background-image: url('https://plus.unsplash.com/premium_photo-1682125845754-9a4b0d77a66a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzZ8fGNhcnxlbnwwfHwwfHx8MA%3D%3D');
+    background-image: url('https://d9pfvpeevxz0y.cloudfront.net/blog/wp-content/uploads/2017/03/Blog_032017-1200x673.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
