--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    background-image: url('https://d9pfvpeevxz0y.cloudfront.net/blog/wp-content/uploads/2017/03/Blog_032017-1200x673.jpg');
+    background-image: url('https://img.freepik.com/free-photo/superhero-car-vintage-style_23-2151636138.jpg?ga=GA1.1.586831257.1746381993&semt=ais_hybrid&w=1111');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
